# Turtle-Odyssey

./: .env.example  .gitignore  CMakeLists.txt  README.md  build.bat  run.bat
assets/models/: bridge.glb
assets/models/free-retro-american-car-cartoon-low-poly/source/RetroCar/: RetroCar.mtl
include/: AudioManager.h  Camera.h  Car.h  Cubemap.h  GameObject.h  HUD.h  Model.h  Player.h  Shader.h  TextRenderer.h
shaders/: fragment_shader.glsl  skybox_vertex.glsl  vertex_shader.glsl
src/: AudioManager.cpp  main.cpp
